# physics-sim

./: .clang-format  .gitignore  CMakeLists.txt  README.md  text_backup.txt
assets/: shader.vert
include/glad/: glad.h
resources/: shader.frag  shader.vert
src/: App.cpp  App.hpp  AppPhysics.cpp  AppPhysics.hpp  PhysicApp.hpp  glad.c  main.cpp
src/app/: App.cpp  App.hpp  AppPhysics.cpp  AppPhysics.hpp
src/app/slides/: Editor.cpp  Editor.hpp  Player.cpp  Player.hpp  Simulator.cpp  Simulator.hpp  Slide.cpp  Slide.hpp
src/app/widgets/: Scene.cpp  Scene.hpp  extra.hpp
src/gl/: GladWrap.cpp  GladWrap.hpp  ResourcesGl.cpp  ResourcesGl.hpp
src/panels/: PanelRender.cpp  PanelRender.hpp  PanelTexture.cpp  PanelTexure.hpp
src/physics/: Kinematics.cpp  Kinematics.hpp  PhysicFunctions.cpp  PhysicFunctions.hpp  Simulator.cpp  Simulator.hpp
src/slides/: Player.cpp  Player.hpp  Preview.hpp  Simulator.cpp  Simulator.hpp  Slide.cpp  Slide.hpp
src/tools/: Debug.cpp  Debug.hpp  Error.cpp  Error.hpp  Language.hpp  Resources.hpp  Units.cpp  Units.hpp
src/universe/: Camera.cpp  Camera.hpp  Environment.cpp  Environment.hpp  PhysicConfig.hpp  RenderConfig.hpp  Renderer.cpp  Renderer.hpp  Universe.cpp  Universe.hpp
